--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -6,7 +6,7 @@
   <tr>
     <th>Name</th>
     <th>Mobile</th>
-    <th></th>
+    <th colspan="2"></th>
   </tr>
 
   <% @contacts.each do |contact| %>
@@ -14,6 +14,7 @@
       <td><%= contact.name %></td>
       <td><%= contact.mobile %></td>
       <td><%= link_to 'Show', contact_path(contact) %></td>
+      <td><%= link_to 'Edit', edit_contact_path(contact) %></td>
     </tr>
   <% end %>
 </table>
