Extract contact form partial

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,31 +1,3 @@
 <h1>New Contact</h1>
-<%= form_with scope: :contact, url: contacts_path, local: true do |form| %>
-  <% if @contact.errors.any? %>
-    <div id="error_explanation">
-      <h2>
-        <%= pluralize(@contact.errors.count, "error") %> prohibited this contact from being saved:
-      </h2>
-      <ul>
-        <% @contact.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <p>
-    <%= form.label :name %><br>
-    <%= form.text_field :name %>
-  </p>
-
-  <p>
-    <%= form.label :mobile %><br>
-    <%= form.text_field :mobile %>
-  </p>
-
-  <p>
-    <%= form.submit %>
-  </p>
-<% end %>
-
+<%= render 'form' %>
 <%= link_to 'Back', contacts_path %>
