--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -6,7 +6,7 @@
   <tr>
     <th>Name</th>
     <th>Mobile</th>
-    <th colspan="2"></th>
+    <th colspan="3"></th>
   </tr>
 
   <% @contacts.each do |contact| %>
@@ -15,6 +15,7 @@
       <td><%= contact.mobile %></td>
       <td><%= link_to 'Show', contact_path(contact) %></td>
       <td><%= link_to 'Edit', edit_contact_path(contact) %></td>
+      <td><%= link_to 'Delete', contact_path(contact), method: :delete, data: { confirm: 'Are you sure?' } %></td>
     </tr>
   <% end %>
 </table>
